Fixes spacing issues

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -39,10 +39,15 @@ h6 {
     background-size: cover;
 }
 
+.intro-image-text {
+    padding-right: 2%;
+    padding-bottom: 2%;
+}
+
 .intro-message {
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .intro-message > h1 {
@@ -59,6 +64,10 @@ h6 {
 
 .intro-message > h3 {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+}
+
+.intro-pic {
+    width: 15%;
 }
 
 @media(max-width:767px) {
@@ -141,7 +150,7 @@ h6 {
     border-color: #000;
 }
 
-.intro-social-buttons a:hover a:active {
+.intro-social-buttons a:hover, a:active {
     background-color: #a4581e;
     color: #000;
     border-color: #000;    
@@ -153,7 +162,7 @@ h6 {
     border-color: #000;
 }
 
-.banner-social-buttons a:hover a:active {
+.banner-social-buttons a:hover, a:active {
     background-color: #a4581e;
     color: #000;
     border-color: #000;
